--- a/Newgame/app/src/main/res/layout/main.xml
+++ b/Newgame/app/src/main/res/layout/main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/framelayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -8,21 +9,5 @@
         android:layout_width="match_parent"
 
         android:layout_height="400dp" />
-
-    <Button
-        android:id="@+id/button4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
-        android:layout_gravity="bottom|right"/>
-
-    <EditText
-        android:id="@+id/editText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Name"
-        android:layout_gravity="bottom|left"/>
 
 </FrameLayout>
