Add jump to generator activity

--- a/Newgame/app/src/main/res/layout/main.xml
+++ b/Newgame/app/src/main/res/layout/main.xml
@@ -15,6 +15,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|right"
-        android:text="Button" />
+        android:text="New game" />
+    <Button
+        android:id="@+id/button21"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|left"
+        android:text="Generator" />
 
 </FrameLayout>
