--- a/Newgame/app/src/main/res/layout/create_board.xml
+++ b/Newgame/app/src/main/res/layout/create_board.xml
@@ -9,20 +9,20 @@
 
         android:layout_height="400dp" />
 
-    <!--<Button-->
-        <!--android:id="@+id/button5"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:text="Button"-->
-        <!--android:layout_gravity="bottom|right"/>-->
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        android:layout_gravity="bottom|right"/>
 
-    <!--<EditText-->
-        <!--android:id="@+id/editText2"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:ems="10"-->
-        <!--android:inputType="textPersonName"-->
-        <!--android:text="Name"-->
-        <!--android:layout_gravity="bottom|left"/>-->
+    <EditText
+        android:id="@+id/editText2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Name"
+        android:layout_gravity="bottom|left"/>
 
 </FrameLayout>
