--- a/Newgame/app/src/main/res/layout/create_board.xml
+++ b/Newgame/app/src/main/res/layout/create_board.xml
@@ -10,11 +10,11 @@
         android:layout_height="400dp" />
 
     <Button
-        android:id="@+id/button50"
+        android:id="@+id/button5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Accept"
-        android:layout_gravity="bottom|end"/>
+        android:text="Button"
+        android:layout_gravity="bottom|right"/>
 
     <EditText
         android:id="@+id/editText2"
@@ -23,6 +23,6 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Name"
-        android:layout_gravity="bottom|start"/>
+        android:layout_gravity="bottom|left"/>
 
 </FrameLayout>
