--- a/Newgame/app/src/main/res/layout/create_board.xml
+++ b/Newgame/app/src/main/res/layout/create_board.xml
@@ -16,14 +16,12 @@
         android:text="Accept"
         android:visibility="invisible"
         android:layout_gravity="bottom|end"/>
-
-    <EditText
-        android:id="@+id/editText2"
+    <Button
+        android:id="@+id/button51"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Name"
+        android:text="Decline"
+        android:visibility="invisible"
         android:layout_gravity="bottom|start"/>
 
 </FrameLayout>
