--- a/Newgame/app/src/main/res/layout/main.xml
+++ b/Newgame/app/src/main/res/layout/main.xml
@@ -14,4 +14,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Generator" />
+
+    <Button
+        android:id="@+id/dimensionButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Choose dimensions" />
 </LinearLayout>
