--- a/Newgame/app/src/main/res/layout/game.xml
+++ b/Newgame/app/src/main/res/layout/game.xml
@@ -14,8 +14,15 @@
         android:id="@+id/button20"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="100px"
-        android:layout_gravity="bottom|right"
+        android:layout_marginBottom="110px"
+        android:layout_gravity="bottom|end"
         android:text="New game" />
+    <Button
+        android:id="@+id/button21"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="110px"
+        android:layout_gravity="bottom|start"
+        android:text="Undo" />
 
 </FrameLayout>
