--- a/Newgame/app/src/main/res/layout/game.xml
+++ b/Newgame/app/src/main/res/layout/game.xml
@@ -16,6 +16,8 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="100px"
         android:layout_gravity="bottom|right"
-        android:text="New game" />
+        android:text="New game"
+        style="@style/Widget.AppCompat.Button.Borderless.Colored"/>
+
 
 </FrameLayout>
