--- a/Newgame/app/src/main/res/layout/board_layout.xml
+++ b/Newgame/app/src/main/res/layout/board_layout.xml
@@ -11,14 +11,13 @@
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-
-            android:padding="5dp">
+            android:orientation="horizontal">
 
             <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_weight="0.5">
+                android:layout_weight="0.5"
+                android:padding="5dp">
 
                 <!--<LinearLayout-->
                     <!--android:layout_width="match_parent"-->
@@ -31,7 +30,8 @@
                     android:layout_height="wrap_content"
                     android:adjustViewBounds="true"
                     android:contentDescription="add new"
-                    android:src="@drawable/plus" />
+                    android:src="@drawable/plus"
+                    android:layout_marginBottom="5dp"/>
 
                     <ImageView
                         android:id="@+id/imageView2"
@@ -39,34 +39,46 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:src="@drawable/empty"
-                        android:adjustViewBounds="true"/>
+                        android:adjustViewBounds="true"
+                        android:layout_marginBottom="5dp"/>
                     <ImageView
                         android:id="@+id/imageView4"
                         android:layout_below="@+id/imageView2"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:src="@drawable/empty"
-                        android:adjustViewBounds="true"/>
+                        android:adjustViewBounds="true"
+                        android:layout_marginBottom="5dp"/>
                     <ImageView
                         android:id="@+id/imageView6"
                         android:layout_below="@+id/imageView4"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:src="@drawable/empty"
-                        android:adjustViewBounds="true"/>
+                        android:adjustViewBounds="true"
+                        android:layout_marginBottom="5dp"/>
                     <ImageView
                         android:id="@+id/imageView8"
                         android:layout_below="@+id/imageView6"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:src="@drawable/empty"
-                        android:adjustViewBounds="true"/>
+                        android:adjustViewBounds="true"
+                        android:layout_marginBottom="5dp"/>
+                    <android.support.design.widget.FloatingActionButton
+                        android:id="@+id/fab"
+                        android:layout_below="@+id/imageView8"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/plus"
+                        android:layout_marginBottom="5dp"/>
                 <!--</LinearLayout>-->
             </RelativeLayout>
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="0.5">
+                android:layout_weight="0.5"
+                android:padding="5dp">
 
                 <!--<LinearLayout-->
                     <!--android:layout_width="match_parent"-->
@@ -78,35 +90,40 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:src="@drawable/empty"
-                        android:adjustViewBounds="true"/>
+                        android:adjustViewBounds="true"
+                        android:layout_marginBottom="5dp"/>
                     <ImageView
                         android:id="@+id/imageView3"
                         android:layout_below="@+id/imageView1"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:src="@drawable/empty"
-                        android:adjustViewBounds="true"/>
+                        android:adjustViewBounds="true"
+                        android:layout_marginBottom="5dp"/>
                     <ImageView
                         android:id="@+id/imageView5"
                         android:layout_below="@+id/imageView3"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:src="@drawable/empty"
-                        android:adjustViewBounds="true"/>
+                        android:adjustViewBounds="true"
+                        android:layout_marginBottom="5dp"/>
                     <ImageView
                         android:id="@+id/imageView7"
                         android:layout_below="@+id/imageView5"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:src="@drawable/empty"
-                        android:adjustViewBounds="true"/>
+                        android:adjustViewBounds="true"
+                        android:layout_marginBottom="5dp"/>
                     <ImageView
                         android:id="@+id/imageView9"
                         android:layout_below="@+id/imageView7"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:src="@drawable/empty"
-                        android:adjustViewBounds="true"/>
+                        android:adjustViewBounds="true"
+                        android:layout_marginBottom="5dp"/>
                 <!--</LinearLayout>-->
             </RelativeLayout>
         </LinearLayout>
