--- a/Newgame/app/src/main/res/layout-land/game.xml
+++ b/Newgame/app/src/main/res/layout-land/game.xml
@@ -10,11 +10,18 @@
 
         android:layout_height="match_parent" />
 
+    <Chronometer
+        android:id="@+id/chronometer2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right"
+        android:layout_margin="10dp"/>
+
     <Button
         android:id="@+id/button20"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|right"
+        android:layout_gravity="right"
         android:text="New game" />
 
 </FrameLayout>
