Add user statistics

--- a/Newgame/app/src/main/res/layout/main.xml
+++ b/Newgame/app/src/main/res/layout/main.xml
@@ -26,4 +26,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Choose board" />
+
+    <Button
+        android:id="@+id/statistics"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Statistics" />
 </LinearLayout>
