--- a/Newgame/app/src/main/res/layout/congratulations.xml
+++ b/Newgame/app/src/main/res/layout/congratulations.xml
@@ -1,32 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
-
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="212dp"
-        android:layout_marginEnd="32dp"
-        android:text="Button" />
-
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignTop="@+id/button"
-        android:layout_marginStart="28dp"
-        android:text="Button" />
-
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/congratulationsText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:text="Gratz"
+        android:layout_centerInParent="true"/>
+    <TextView
+        android:id="@+id/difficulty"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="48dp"
-        android:text="TextView" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Очень сложно"
+        android:layout_below="@id/congratulationsText"/>
+    <TextView
+        android:id="@+id/gameTime"
+        android:layout_centerHorizontal="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Время: 0"
+        android:layout_below="@id/difficulty"/>
+    <TextView
+        android:id="@+id/bestTime"
+        android:layout_centerHorizontal="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Лучшее время: 0"
+        android:layout_below="@id/gameTime"/>
+    <Button
+        android:id="@+id/newGame"
+        android:layout_centerHorizontal="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Новая игра"
+        android:layout_below="@+id/bestTime"/>
 </RelativeLayout>
