--- a/Newgame/app/src/main/res/values/styles.xml
+++ b/Newgame/app/src/main/res/values/styles.xml
@@ -44,5 +44,9 @@
         <item name="android:gravity">center</item>
         <item name="android:textSize">36sp</item>
     </style>
+    
+    <style name="Animation">
+        <item name="android:windowEnterAnimation">@anim/popup_show</item>
+    </style>
 
 </resources>
