--- a/Newgame/app/src/main/res/layout/activity_settings.xml
+++ b/Newgame/app/src/main/res/layout/activity_settings.xml
@@ -6,4 +6,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="hello"/>
+    <Button
+        android:id="@+id/login_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Войти"/>
 </android.support.constraint.ConstraintLayout>
