--- a/Newgame/app/src/main/res/layout/fragment_pause.xml
+++ b/Newgame/app/src/main/res/layout/fragment_pause.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/grey_100">
@@ -9,9 +9,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:layout_alignParentBottom="true"
+        android:layout_alignParentTop="true"
         ads:adSize="MEDIUM_RECTANGLE"
         ads:adUnitId="ca-app-pub-4821455534657943/5445611724">
     </com.google.android.gms.ads.AdView>
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
