--- a/Newgame/app/src/main/res/layout/activity_demo.xml
+++ b/Newgame/app/src/main/res/layout/activity_demo.xml
@@ -36,7 +36,7 @@
                 android:layout_width="15pt"
                 android:layout_marginLeft="10pt"
                 android:layout_height="15pt"
-                android:background="@drawable/pause"
+                android:background="@drawable/play2"
                 android:layout_centerVertical="true"
                 android:layout_toRightOf="@id/chronometer2"/>
             <ImageButton
@@ -49,7 +49,7 @@
                 android:src="@drawable/ic_action_more_vert"
                 style="@style/Widget.AppCompat.ActionButton.Overflow"/>
         </RelativeLayout>
-        <sudoku.newgame.DrawView
+        <sudoku.newgame.DemoDrawView
             android:id="@+id/drawView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -61,7 +61,17 @@
             android:layout_below="@+id/relativeCondition"
             android:orientation="vertical">
         </LinearLayout>
-
-
     </RelativeLayout>
+    <TextView
+        android:id="@+id/text_tip"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/grey_100"
+        android:textSize="22sp"
+        android:text="@string/start_demo"
+        android:shadowDx="1"
+        android:shadowDy="10"
+        android:shadowRadius="1"
+        android:gravity="center"
+        android:layout_gravity="bottom"/>
 </FrameLayout>
