--- a/Newgame/app/src/main/res/drawable/radiobutton.xml
+++ b/Newgame/app/src/main/res/drawable/radiobutton.xml
@@ -2,14 +2,14 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:state_checked="true"><shape>
-        <solid android:color="#1c5fab" />
+        <solid android:color="#5d717f" />
 
-        <stroke android:width="1dp" android:color="#1c5fab" />
+        <stroke android:width="1dp" android:color="#5d717f" />
     </shape></item>
     <item android:state_checked="false"><shape android:shape="rectangle">
-        <solid android:color="#ffffff" />
+        <solid android:color="@color/grey_300" />
 
-        <stroke android:width="1dp" android:color="#1c5fab" />
+        <stroke android:width="1dp" android:color="#5d717f" />
     </shape></item>
 
 </selector>
