--- a/Newgame/app/src/main/res/layout/activity_demo.xml
+++ b/Newgame/app/src/main/res/layout/activity_demo.xml
@@ -46,7 +46,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_gravity="right"
                 android:layout_centerVertical="true"
-                android:src="@drawable/ic_action_more_vert"
+                android:src="@drawable/ic_vert"
                 style="@style/Widget.AppCompat.ActionButton.Overflow"/>
         </RelativeLayout>
         <sudoku.newgame.DemoDrawView
