--- a/Newgame/app/src/main/res/layout/create_board.xml
+++ b/Newgame/app/src/main/res/layout/create_board.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/create_board"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -8,7 +9,12 @@
         android:layout_width="match_parent"
 
         android:layout_height="400dp" />
-
+    <TextView
+        android:id="@+id/error_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center"
+        android:layout_marginBottom="50dp"/>
     <Button
         android:id="@+id/button50"
         android:layout_width="wrap_content"
