--- a/Newgame/app/src/main/res/layout/fragment_history.xml
+++ b/Newgame/app/src/main/res/layout/fragment_history.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/fragment_history"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@color/grey_100">
@@ -12,15 +13,18 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
             <TextView
+                android:id="@+id/history_header"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/history"
+                android:textSize="20sp"
                 android:layout_gravity="center_horizontal"/>
             <TextView
                 android:id="@+id/historyList"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/history"
+                android:textSize="15sp"
                 android:layout_gravity="center_horizontal"/>
         </LinearLayout>
 
