--- a/Newgame/app/src/main/res/layout/fragment_settings.xml
+++ b/Newgame/app/src/main/res/layout/fragment_settings.xml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    android:id="@+id/fragment_settings"
     android:layout_height="match_parent">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="hello"/>
+
     <Button
         android:id="@+id/login_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Войти"/>
-    <Button
-        android:id="@+id/leaderboards"
+
+    <ToggleButton
+        android:id="@+id/theme"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Чемпики"/>
+        android:checked="false"
+        android:textOff="@string/dark_theme"
+        android:textOn="@string/light_theme"/>
 </LinearLayout>
