--- a/Newgame/app/src/main/res/menu/menu_stat.xml
+++ b/Newgame/app/src/main/res/menu/menu_stat.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".MainActivity">
+    tools:context=".GameActivity">
     <item
         android:id="@+id/menuSettings"
         android:orderInCategory="100"
