--- a/Newgame/app/src/main/res/layout/game.xml
+++ b/Newgame/app/src/main/res/layout/game.xml
@@ -59,7 +59,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@+id/relativeCondition"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:visibility="invisible">
         </LinearLayout>
 
 
