Add splash screen

--- a/Newgame/app/src/main/res/values/styles.xml
+++ b/Newgame/app/src/main/res/values/styles.xml
@@ -1,5 +1,8 @@
 <resources>
-
+    <!-- Кастомная AppTheme.Launcher. Устанавливает в качестве фона вашу drawable -->
+    <style name="AppTheme.Launcher">
+        <item name="android:windowBackground">@drawable/launch_screen</item>
+    </style>
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
