--- a/Newgame/app/src/main/res/layout/fragment_settings.xml
+++ b/Newgame/app/src/main/res/layout/fragment_settings.xml
@@ -39,24 +39,27 @@
     </LinearLayout>
     <LinearLayout
         android:id="@+id/user"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_margin="10dp"
-        android:visibility="gone">
+        android:visibility="gone"
+        android:weightSum="4">
         <TextView
             android:id="@+id/user_email"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:textSize="16sp"/>
+            android:textSize="16sp"
+            android:layout_weight="3"/>
         <Button
             android:id="@+id/sign_out_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:layout_gravity="center"
-            android:text="@string/sign_out"/>
+            android:text="@string/sign_out"
+            android:layout_weight="1"/>
     </LinearLayout>
 
     <TextView
