--- a/Newgame/app/src/main/res/layout/create_board.xml
+++ b/Newgame/app/src/main/res/layout/create_board.xml
@@ -19,14 +19,14 @@
         android:id="@+id/button50"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Accept"
+        android:text="@string/accept"
         android:visibility="invisible"
         android:layout_gravity="bottom|end"/>
     <Button
         android:id="@+id/button51"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Decline"
+        android:text="@string/decline"
         android:visibility="invisible"
         android:layout_gravity="bottom|start"/>
 
