--- a/Newgame/app/src/main/res/layout/fragment_congratulations.xml
+++ b/Newgame/app/src/main/res/layout/fragment_congratulations.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/gratz_layout"
     android:layout_width="match_parent" android:layout_height="match_parent">
     <TextView
         android:id="@+id/congratulationsText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Gratz"
+        android:textSize="24sp"
         android:layout_centerInParent="true"/>
     <TextView
         android:id="@+id/difficulty"
@@ -33,7 +35,7 @@
         android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Новая игра"
+        android:text="@string/new_game"
         android:layout_below="@+id/bestTime"/>
     <View
         android:id="@+id/popupView"
